k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: peadminns
  labels:
    app: splunk-tool
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: splunk-tool
      component: frontend
  template:
    metadata:
      labels:
        app: splunk-tool
        component: frontend
    spec:
      containers:
        - name: frontend
          image: REPLACE_ME_REGISTRY/splunk-log-viewer-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: peadminns
  labels:
    app: splunk-tool
    component: frontend
spec:
  selector:
    app: splunk-tool
    component: frontend
  ports:
    - port: 80
      targetPort: 80
